// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes tests Render routes for authenticated user 1`] = `
<div
  className="app"
>
  <div>
    <div>
      <div
        className="strips"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        className="clear"
      />
    </div>
    <div
      className="ui topbar-mobile menu"
    >
      <a
        className="item"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="bars icon"
        />
      </a>
      <a
        className="item logo"
        href="/home"
        onClick={[Function]}
      >
        <img
          className="ui image"
          src="magazineluiza.png"
        />
      </a>
    </div>
    <div
      className="ui navbar menu"
    >
      <a
        className="item"
        href="/"
        onClick={[Function]}
      >
        <img
          className="ui image logo"
          src="magazineluiza.png"
        />
      </a>
      <div
        aria-expanded={false}
        className="ui item dropdown active"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Comercial
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Logística
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Tema
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/theme"
            onClick={[Function]}
            role="option"
          >
            Tema
          </a>
        </div>
      </div>
      <div
        className="right menu logout"
      >
        <div
          aria-expanded={false}
          className="ui item dropdown"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Olá, CBT_SILVA
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <a
              className="item"
              href="/logout"
              onClick={[Function]}
              role="option"
            >
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ui segment pushable"
  >
    <div
      className="ui inverted vertical labeled icon ui overlay left thin sidebar menu"
    >
      <div
        aria-expanded={false}
        className="ui item dropdown active"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Comercial
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Logística
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Tema
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/theme"
            onClick={[Function]}
            role="option"
          >
            Tema
          </a>
        </div>
      </div>
      <a
        className="item"
        href="/logout"
        onClick={[Function]}
      >
        Logout
      </a>
    </div>
    <div
      className="pusher"
    >
      <div
        className="ui basic segment"
      >
        <div
          className="ui container"
        >
          <div
            className="page-title"
          >
            <h1>
              Olá, Usuário
            </h1>
            <h2>
              Bem vindo à plataforma comercial;
            </h2>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Routes tests Render routes for non authenticated user 1`] = `
<div
  className="app"
>
  <div
    className="ui segment pushable"
  >
    <div
      className="ui inverted vertical labeled icon ui overlay left thin sidebar menu"
    >
      <div
        aria-expanded={false}
        className="ui item dropdown active"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Comercial
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Logística
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Tema
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/theme"
            onClick={[Function]}
            role="option"
          >
            Tema
          </a>
        </div>
      </div>
      <a
        className="item"
        href="/logout"
        onClick={[Function]}
      >
        Logout
      </a>
    </div>
    <div
      className="pusher"
    >
      <div
        className="ui basic segment"
      >
        <div
          className="login"
        >
          <div
            className="box"
          >
            <div
              className="ui grid"
            >
              <div
                className="computer only six wide column brand"
              >
                <img
                  className="ui image logo"
                  src="magazineluiza.png"
                />
                <span>
                  Acesse sistemas, e administrativos tudo em um só lugar.
                </span>
                <img
                  className="ui image lu"
                  src="lu.png"
                />
              </div>
              <div
                className="ten wide computer sixteen wide mobile column form"
              >
                <form
                  className="ui form"
                  onSubmit={[Function]}
                >
                  <h1>
                    Acesso ao Sistema
                  </h1>
                  <div
                    className="field"
                  >
                    <label>
                      Usuário
                    </label>
                    <input
                      placeholder="Digite seu usuário"
                    />
                    <span>
                      Usuário do magazineluiza
                    </span>
                  </div>
                  <div
                    className="field"
                  >
                    <label>
                      Senha
                    </label>
                    <input
                      placeholder="Digite sua senha"
                    />
                    <span>
                      Senha do portal
                    </span>
                  </div>
                  <button
                    className="ui green fluid button"
                    onClick={[Function]}
                    role="button"
                    type="submit"
                  >
                    Acessar
                  </button>
                  <span
                    className="forgot-password"
                  >
                    Esqueceu sua senha? 
                    <a
                      href="/"
                    >
                      Clique aqui
                    </a>
                  </span>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
